# tree-sitter-tact

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-tact.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tact/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTactTests/: TreeSitterTactTests.swift
editor_queries/helix/: highlights.scm  indents.scm  textobjects.scm
editor_queries/helix-24.03/: highlights.scm
editor_queries/neovim/: folds.scm  highlights.scm  indents.scm  locals.scm  textobjects.scm
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: asm_function.txt  contract.txt  expression.txt  function.txt  import.txt  message.txt  statement.txt  struct.txt  trait.txt  value_expression.txt
test/highlight/: asm_function.tact  builtin_functions.tact  builtin_variables.tact  contract.tact  expression.tact  global_function.tact  message.tact  statement.tact  struct.tact  trait.tact  value_expression.tact
test/sample/: example.tact
