[package]
name = "tree-sitter-tact"
description = "A tree-sitter grammar for the Tact programming language"
version = "1.6.0"
authors = ["Novus Nota"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tact"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tact-lang/tree-sitter-tact"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
